<resources>
    <string name="app_name">PersisApp</string>
    <string name="about_content">با پارسیس سفرهای درون شهری شما رنگ و بوی تازه‌ای می‌گیرد و هر ساعت از شبانه روز به مقصد خواهید رسید. کافیست مبدأ و مقصد را مشخص کرده و پس از مشاهده هزینه سفر، گزینه درخواست را لمس کنید تا نزدیک‌ترین پارسیس برای انجام سفرهای درون شهری در اختیار شما قرار بگیرد. ما به عنوان رابط بین شما و رانندگان شهر تهران، تلاش می‌کنیم تا سفر بسیار خوبی را تجربه کنید.</string>
    <string name="about_persis">درباره پارسیس</string>
    <string name="access_to_statistic_data">دسترسی به اطلاعات اماری</string>
    <string name="action_tour_start_request">شروع درخواست</string>
    <string name="activate_code">کد فعالسازی</string>
    <string name="add_credit">افزایش موجودی</string>
    <string name="add_credit_amount">مبلغ افزایش (ریال)</string>
    <string name="add_credit_from">افزایش موجودی از طریق :</string>
    <string name="add_credit_label">برای افزایش موجودی دکمه + را انتخاب کنید</string>
    <string name="add_favorite">اضافه کردن آدرس منتخب …</string>
    <string name="add_favorite_address">اضافه کردن آدرس منتخب</string>
    <string name="add_shrotcut_to_home">اضافه کردن میانبر</string>
    <string name="add_this_address">اضافه کردن این آدرس</string>
    <string name="address_for_driver_route_detail">جزئیات آدرس جهت مسیریابی راننده :</string>
    <string name="address_hint_favorite">کوچه٬ پلاک٬ واحد و …</string>
    <string name="adjust_passenger_production_appkey">vn7x9leuzff9</string>
    <string name="all_packages">مدت بسته</string>
    <string name="all_services">همه سرویس‌ها</string>
    <string name="amount">مبلغ:</string>
    <string name="amount_needed_for_charge">شارژ آنلاین مورد نیاز:</string>
    <string name="any_error_occurrence">متأسفانه خطایی رخ داده است</string>
    <string name="ap_register_error">مشکلی در ارتباط با سرور رخ داده، لطفا دوباره تلاش کنید</string>
    <string name="ap_retry_message">خطای دسترسی به کیف پول آپ</string>
    <string name="ap_wallet">کیف پول آپ</string>
    <string name="ap_wallet_activation">فعال‌سازی کیف پول آپ</string>
    <string name="ap_wallet_activation_description">با اتصال کیف پول آب به حساب پارسیس‌تان می‌توانید از موجودی آن برای درخواست پارسیس، خرید شارژ، خرید غذا، رزرو هتل و… استفاده کنید.</string>
    <string name="ap_wallet_activation_description_more_info">اطلاعات بیشتر ⓘ</string>
    <string name="ap_wallet_change_description">اگر شماره موبایل‌ پارسیس‌تان را تغییر بدهید، اتصال کیف پول آپ شما قطع می‌شود. ولی موجودی کیف پول قبلی‌تان محفوظ است و می‌توانید آن را به کیف پول جدید منتقل کنید.</string>
    <string name="ap_wallet_change_title">تغییر اتصال کیف پول آپ</string>
    <string name="ap_wallet_payment">پرداخت از کیف پول آپ</string>
    <string name="app_font">fonts/iran_sans_mobile_medium.ttf</string>
    <string name="app_font_path_iran_sans_mobile_light">fonts/iran_sans_mobile_light.ttf</string>
    <string name="app_font_path_iran_sans_mobile_medium">fonts/iran_sans_mobile_medium.ttf</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_id">cab.persis.passenger</string>
    <string name="apply">اعمال</string>
    <string name="arabic">العربیه</string>
    <string name="area">محدوده :</string>
    <string name="attention">توجه</string>
    <string name="available_credit">موجودی فعلی:</string>
    <string name="back_button_desc">بازگشت</string>
    <string name="backpay_credit">سند اصلاحی</string>
    <string name="bank_card">کارت عضو شتاب</string>
    <string name="barcode_scan">اسکن بارکد</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="bill_payment">پرداخت قبض</string>
    <string name="bill_payment_description">با وارد کردن شناسه قبض و پرداخت درج شده برروی قبض قادر خواهید بود قبض های آب، برق، گاز، تلفن ثابت، جریمه و عوارض شهرداری را پرداخت نمایید.</string>
    <string name="bill_payment_history">تاریخچه</string>
    <string name="bill_payment_scan">اسکن بارکد</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_persis">تماس با پشتیبانی پارسیس</string>
    <string name="call_persis_box">تماس با پشتیبانی پارسیس باکس</string>
    <string name="call_to_driver">تماس با راننده</string>
    <string name="cancel_request">لغو درخواست</string>
    <string name="cancel_ride">انصراف از سفر</string>
    <string name="cancel_ride_label">لغو سفر</string>
    <string name="cancel_ride_without_charge_message">راننده پارسیس در راه مبدأ شما است. آیا قصد لغو سفر خود را دارید؟</string>
    <string name="canceling_ride">لغو سفر</string>
    <string name="cant_create_account">مشکلی در ساخت اکانت وجود دارد</string>
    <string name="cash">نقدی</string>
    <string name="cash_payment_by_recipient">پرداخت نقدی توسط گیرنده</string>
    <string name="cash_payment_warning">در پرداخت نقدی امکان استفاده از موجودی وجود ندارد.</string>
    <string name="cellphone_not_verified">برای استفاده از کیف پول آپ، لطفاً شماره موبایل خود را در بخش اطلاعات کاربری وارد نمایید.</string>
    <string name="cellular">اینترنت موبایل</string>
    <string name="change_ap_wallet_phone_number">تغییر شماره موبایل آپ</string>
    <string name="change_email_address">تغییر آدرس ایمیل</string>
    <string name="change_mobile_number">تغییر شماره همراه</string>
    <string name="change_number">اصلاح شماره</string>
    <string name="change_origin">تغییر مبدأ</string>
    <string name="change_payment_type">تغییر شیوه پرداخت</string>
    <string name="change_service_type">تغییر نوع سرویس</string>
    <string name="character_counter_0_500">۰/۵۰۰</string>
    <string name="character_counter_500">/۵۰۰</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="charge_choose_operator">اپراتور شماره موبایل وارد شده را انتخاب کنید</string>
    <string name="charge_type">نوع شارژ</string>
    <string name="charge_type_not_found">بسته‌ای یافت نشد</string>
    <string name="charge_view_mobile_phone_number_hint">09*********</string>
    <string name="chip_text">Chip text</string>
    <string name="choose">انتخاب</string>
    <string name="choose_second_dest">انتخاب مقصد دوم</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">بستن</string>
    <string name="code_expire_time">مدت اعتبار کد: 00:60</string>
    <string name="complete_box_options_details">تکمیل جزئیات مقصد</string>
    <string name="complete_description">توضیحات کامل</string>
    <string name="confirm_and_pay">تأیید و پرداخت</string>
    <string name="confirm_and_request_service">تایید و درخواست پارسیس!</string>
    <string name="confirm_bill_payment">پرداخت را کامل کنید</string>
    <string name="confirm_mobile_number">تایید شماره همراه</string>
    <string name="confirm_options">تایید گزینه ها</string>
    <string name="confirmation_code_sent">کد تایید ارسال شد</string>
    <string name="copy">کپی کردن کد</string>
    <string name="copy_message">کپی شد</string>
    <string name="could_not_find_your_problem">مشکل شما در لیست بالا نبود؟</string>
    <string name="credit_cancel_ride">بابت لغو سفر به شماره</string>
    <string name="credit_cash_payment">بابت پرداخت نقدی</string>
    <string name="credit_decreased">ریال کاهش موجودی</string>
    <string name="credit_default_type">شناسه پیگیری: ‌</string>
    <string name="credit_for_initial">موجودی اولیه هدیه از طرف پارسیس</string>
    <string name="credit_for_refferal">بابت معرفی دوستان به پارسیس</string>
    <string name="credit_for_ride">بابت هزینه سفر به شماره</string>
    <string name="credit_for_voucher">افزایش موجودی از طریق پارسیس کارت</string>
    <string name="credit_online_payment">بابت پرداخت آنلاین به شماره</string>
    <string name="credit_raised">ریال افزایش موجودی</string>
    <string name="credit_ussd_payment">بابت پرداخت به روش USSD به شماره</string>
    <string name="current_balance">موجودی فعلی:</string>
    <string name="current_city">شهر فعلی</string>
    <string name="current_credit">موجودی فعلی: %1$s ریال</string>
    <string name="daily_limit_for_call_verification">محدودیت تعداد تماس برای تایید شماره موبایل شما در امروز به پایان رسیده است</string>
    <string name="daily_limit_for_verification">محدودیت تعداد اس ام اس برای تایید شماره موبایل شما در امروز به پایان رسیده است</string>
    <string name="dear_user">%1$s عزیز</string>
    <string name="dear_user_female">%1$s عزیز</string>
    <string name="default_wallet">کیف پول پیش‌فرض</string>
    <string name="default_wallet_ap">آپ</string>
    <string name="default_wallet_confirmation">تایید</string>
    <string name="default_wallet_dialog_description">هزینه سفر به صورت پیش‌فرض از کیف پول انتخابی برداشت خواهد شد. در زمان سفر هم می‌توانید شیوه پرداخت را تغییر دهید.</string>
    <string name="default_wallet_persis">پارسیس</string>
    <string name="deliver_to">تحویل گیرنده</string>
    <string name="desired_location">محل مورد نظر...</string>
    <string name="destination_label">مقصد:</string>
    <string name="destination_pin_marker_desc">پین مقصد</string>
    <string name="did_not_find_any_result">نتیجه ای یافت نشد</string>
    <string name="disabled">غیرفعال</string>
    <string name="dismiss">انصراف</string>
    <string name="donate_to_kids_ten_percentage">کمک ۱۰٪ به کودکان</string>
    <string name="dont_want_now">تمایلی ندارم</string>
    <string name="download_new_version">دریافت نسخه جدید</string>
    <string name="download_original_version">دریافت نسخه اصلی</string>
    <string name="download_ride_receipt">دریافت رسید</string>
    <string name="driver_accepted">یک پارسیس! برای شما پیدا شد.</string>
    <string name="driver_info_failed_message">خطا در دریافت اطلاعات راننده</string>
    <string name="driver_info_retry">تلاش مجدد</string>
    <string name="driver_is_coming">راننده در مسیر مبدا</string>
    <string name="inputbar_origin">مبدأ…</string>
    <string name="my_location_button_desc">موقعیت مکانی من</string>
    <string name="profile_enter_your_email_address">ایمیل خود را وارد کنید</string>
    <string name="resend_code_verification">ارسال مجدد</string>
    <string name="signup_revamp_otp_change_phone">تغییر شماره تلفن همراه</string>
    <string name="signup_revamp_otp_time">ثانیه تا درخواست مجدد کد</string>
    <string name="signup_revamp_otp_title">کد فعال‌سازی را وارد کنید.</string>
    <string name="signup_revamp_recover_confirm_title">کد تأیید ایمیل شد.</string>
    <string name="signup_revamp_recover_email">ایمیل</string>
    <string name="signup_revamp_recover_next">مرحله بعد</string>
    <string name="signup_revamp_recover_subtitle">شما در حال ثبت‌نام با شماره‌ی %1$s هستید. اگر قبلاً با استفاده از ایمیل، حساب کاربری ساخته‌اید لطفاً ایمیل خود را وارد کنید.</string>
    <string name="signup_revamp_recover_title">قبلاً ثبت‌نام کرده‌اید؟</string>
    <string name="signup_revamp_recover_tsa_description">شما می‌توانید تأیید دومرحله‌ای را از بخش تنظیمات برنامه غیرفعال کنید.</string>
    <string name="signup_revamp_recover_tsa_next">تایید</string>
    <string name="signup_revamp_recover_tsa_subtitle">تأیید دو مرحله‌ای برای اطمینان از این است که این حساب کاربری متعلق به شماست. کد تأیید ارسال شده به ایمیل %1$s را اینجا وارد کنید.</string>
    <string name="signup_revamp_welcome_phone_number_hint">مثلاً ۰۹۱۲۳۴۵۶۷۸۹</string>
    <string name="signup_revamp_welcome_phone_number_title">شماره تلفن همراه</string>
    <string name="signup_revamp_welcome_subtitle">لطفاً شماره تلفن همراه‌تان را وارد کنید تا کد فعال‌سازی برای شما ارسال شود.</string>
    <string name="signup_revamp_welcome_title">به پارسیس خوش آمدید.</string>
    <string name="persis_map_copyright">"© Snapp
© OpenStreetMap"</string>
    <string name="submit_destination">تأیید مقصد</string>
    <string name="submit_origin">تأیید مبدأ</string>
    <string name="where_are_you">کجا هستید؟</string>
    <string name="where_are_you_going">کجا می‌روید؟</string>
</resources>