<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/brown_grey" android:id="@+id/view_main_mapbox_copyright_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/persis_map_copyright" android:layout_marginEnd="@dimen/margin_medium" app:layout_constraintBottom_toBottomOf="@id/view_main_footer_my_location_btn" app:layout_constraintEnd_toEndOf="parent" style="@style/TextView.Light.Small" />
    <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/view_main_footer_my_location_btn" android:background="@drawable/bg_circle_shape_shaddow" android:layout_width="@dimen/button_height_default" android:layout_height="@dimen/button_height_default" android:src="@drawable/ic_my_location_black_24dp" android:contentDescription="@string/my_location_button_desc" android:layout_marginStart="@dimen/margin_medium_low" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:id="@+id/view_main_footer_step2_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_main_footer_my_location_btn">
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_inputbar_normal" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip">
            <LinearLayout android:gravity="start|center" android:orientation="horizontal" android:id="@+id/view_main_footer_step2_origin_layout" android:background="@drawable/selector_inputbar_top_radius_button" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="4.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="4.0dip" android:paddingStart="@dimen/padding_medium" android:paddingEnd="@dimen/padding_medium">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_inputbar_origin" android:adjustViewBounds="true" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/black" android:id="@+id/view_main_footer_step2_origin_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/inputbar_origin" android:singleLine="true" android:layout_weight="1.0" android:layout_marginStart="@dimen/margin_medium" android:layout_marginEnd="@dimen/margin_medium_2x" style="@style/TextView.Default.Medium" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/colorAccentDeep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_origin" style="@style/TextView.Light.Medium" />
            </LinearLayout>
            <View android:layout_height="1.0dip" android:layout_marginStart="64.0dip" android:layout_marginEnd="20.0dip" style="@style/Divider.Horizontal" />
            <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/font_size_large" android:textColor="@color/ash_gray" android:textColorHint="@color/gray_light" android:gravity="start|center" android:id="@+id/view_main_footer_step2_destination_input" android:background="@drawable/selector_inputbar_bottom_radius_button" android:paddingLeft="@dimen/padding_medium" android:paddingRight="@dimen/padding_medium" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="6.0dip" android:hint="@string/where_are_you_going" android:singleLine="true" android:drawablePadding="@dimen/padding_medium" android:drawableStart="@drawable/ic_inputbar_destination" android:drawableEnd="@drawable/ic_search_inputbar" style="@style/Button.Bold" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_medium">
            <LinearLayout android:id="@+id/view_main_footer_step2_destination_submit_layout" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_default" android:layout_marginStart="@dimen/margin_medium" android:layout_marginEnd="@dimen/margin_medium">
                <androidx.appcompat.widget.AppCompatImageButton android:id="@+id/view_main_footer_step2_favorite_btn" android:background="?selectableItemBackground" android:layout_width="@dimen/button_height_default" android:layout_height="@dimen/button_height_default" android:src="@drawable/ic_star_with_border" android:scaleType="fitXY" android:layout_marginEnd="@dimen/margin_small" />
                <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/font_size_large" android:id="@+id/view_main_footer_step2_destination_submit_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/submit_destination" android:layout_weight="1.0" style="@style/Button.Bold.AccentBackground.WithoutShadow" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/view_main_footer_step2_favorite_bar_container" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_default">
                <fragment   android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/view_main_footer_step1_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_very_small" android:layout_marginBottom="@dimen/margin_medium" android:layout_marginStart="@dimen/margin_medium_low" android:layout_marginEnd="@dimen/margin_medium_low" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_main_footer_my_location_btn">
        <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/font_size_large" android:textColor="@color/ash_gray" android:textColorHint="@color/gray_light" android:gravity="start|center" android:id="@+id/view_main_footer_step1_origin_input" android:background="@drawable/selector_inputbar_button" android:paddingLeft="@dimen/padding_medium" android:paddingRight="@dimen/padding_medium" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginBottom="8.0dip" android:hint="@string/where_are_you" android:singleLine="true" android:drawablePadding="@dimen/padding_medium" android:drawableStart="@drawable/ic_inputbar_origin" android:drawableEnd="@drawable/ic_search_inputbar" style="@style/Button.Bold" />
        <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/font_size_large" android:id="@+id/view_main_footer_step1_origin_submit_btn" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_default" android:layout_marginLeft="@dimen/margin_very_small" android:layout_marginRight="@dimen/margin_very_small" android:text="@string/submit_origin" style="@style/Button.Bold.AccentBackground.WithoutShadow" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>