<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:layoutDirection="rtl"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/view_signup_revamp_signup_recover_back" android:padding="@dimen/padding_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_header_back" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@+id/view_signup_revamp_signup_recover_back">
        <LinearLayout android:gravity="top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_medium_2x" android:layout_marginTop="@dimen/margin_medium_2x" android:layout_marginRight="@dimen/margin_medium_2x">
            <androidx.appcompat.widget.AppCompatTextView android:textStyle="bold" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small" android:text="@string/signup_revamp_recover_title"
               />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/black" android:id="@+id/view_signup_revamp_signup_recover_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/signup_revamp_recover_subtitle"
                />
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/signup_revamp_recover_email" style="@style/TextView.Default.Large" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout android:textAppearance="@style/EditText" android:id="@+id/view_signup_revamp_signup_recover_email_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="@font/iran_sans_mobile" app:errorIconDrawable="@null" app:errorTextAppearance="@style/EditText" app:fontFamily="@font/iran_sans_mobile" app:hintEnabled="false">
                    <com.google.android.material.textfield.TextInputEditText android:id="@+id/view_signup_revamp_signup_recover_email_input" android:paddingTop="@dimen/padding_medium" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/profile_enter_your_email_address" android:inputType="textEmailAddress" android:fontFamily="@font/iran_sans_mobile" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" android:layout_marginStart="0.0dip" android:layout_marginEnd="0.0dip" app:backgroundTint="@color/transparent" app:errorTextAppearance="@font/iran_sans_mobile" app:fontFamily="@font/iran_sans_mobile" style="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatImageButton android:layout_gravity="end|center" android:id="@+id/view_signup_revamp_recover_email_clear_text_ib" android:background="?selectableItemBackground" android:paddingTop="@dimen/padding_medium" android:paddingBottom="@dimen/padding_medium" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:tint="@color/gray_light" android:layout_alignTop="@id/view_signup_revamp_signup_recover_email_input_layout" android:scaleX="0.8" android:scaleY="0.8" android:paddingStart="@dimen/padding_medium" android:paddingEnd="0.0dip" android:layout_marginEnd="@dimen/margin_very_small" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_delete_dark_24dp" />
            </RelativeLayout>
            <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:layout_gravity="end" android:id="@+id/view_signup_revamp_signup_recover_next" android:layout_width="@dimen/button_width_medium" android:layout_height="@dimen/button_height_default" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_medium_2x" android:text="@string/signup_revamp_recover_next" android:textAllCaps="false" android:fontFamily="@font/iran_sans_mobile_medium"  style="@style/Button.Signup" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>