<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:layoutDirection="rtl"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/back_signup" android:padding="@dimen/padding_medium" android:layout_width="wrap_content"
        android:rotation="180"
        android:layout_height="wrap_content" android:src="@drawable/ic_header_back" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@id/back_signup">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/view_signup_revamp_code_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_medium_2x">
                <androidx.appcompat.widget.AppCompatTextView android:textStyle="bold" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_revamp_otp_title" style="@style/TextView.Default.ExtraExtraLarge" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/black" android:id="@+id/view_signup_revamp_subtitle_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small"   style="@style/TextView.Default.Large.Light" />
                <androidx.appcompat.widget.AppCompatTextView android:textStyle="bold" android:textColor="@color/colorAccentDeep" android:id="@+id/view_signup_revamp_change_phone_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signup_revamp_otp_change_phone" style="@style/TextView.Default.Large.Light" />
                <EditText android:id="@+id/view_signup_revamp_input_otp_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:cursorVisible="false" android:maxLength="6" android:digits="1234567890۱۲۳۴۵۶۷۸۹۰" android:inputType="number" android:layoutDirection="ltr"  style="@style/EditText.Bold" />
            </LinearLayout>
            <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <FrameLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.5dip" />
                <FrameLayout android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="62.0dip" android:layout_marginStart="@dimen/margin_small" android:layout_marginEnd="@dimen/margin_small">
                    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/colorPrimary" android:gravity="start|center" android:layout_gravity="start|center" android:id="@+id/view_signup_revamp_timer_otp_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/signup_revamp_otp_time" android:layout_marginStart="@dimen/margin_medium" style="@style/TextView.Default.Medium.Light" />
                    <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_size_medium" android:textColor="@color/colorAccentDeep" android:gravity="end|center" android:layout_gravity="end|center"
                        android:enabled="false"
                        android:id="@+id/view_signup_revamp_resend_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resend_code_verification" android:textAllCaps="false" android:fontFamily="@font/iran_sans_mobile_bold" android:layout_marginEnd="@dimen/margin_medium" app:fontFamily="@font/iran_sans_mobile_bold" app:icon="@drawable/ic_retry"  app:iconTint="@color/colorAccentDeep" style="@style/Widget.MaterialComponents.Button.TextButton" />
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>